--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.6.0",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.0"
+    "react-redux": "^5.1.0",
+    "react-scripts": "2.1.0",
+    "react-select": "^2.1.1",
+    "react-sticky": "^6.0.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
